# macchanger-rust

./: Cargo.toml  README.md  rustfmt.toml
src/: ethtool.rs  mac.rs  main.rs
