[package]
name = "macchanger"
version = "0.3.0"
authors = ["Urs Schulz <github@ursschulz.de>"]
edition = "2018"
description = "Program to change MAC addresses"
license-file = "LICENSE"
homepage = "https://gitlab.com/faulesocke/macchanger-rust"
repository = "https://gitlab.com/faulesocke/macchanger-rust"

[dependencies]
netdevice = "0.1.1"
libc = "0.2.48"
clap = "2.32"
colored = "1.7"
